alguns ajustes.